# json-codec-wasm

./: .gitlab-ci.yml  CHANGELOG  Cargo.toml  README.md
src/: ast.rs  buffer.rs  decoder.rs  encoder.rs  lib.rs  macros.rs  stack.rs  utf8.rs
tests/: properties.rs
